--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         const App = () => {
             const sessions = [
                 { id: 1, title: "Session 1: Fundamentals", file: "session1.html" },
-                { id: 2, title: "Session 2: Functions & OOP", file: "session2.html" },
+                { id: 2, title: "Session 2: Functions", file: "session2.html" },
                 { id: 3, title: "Code Examples", file: "code-examples.html" }
             ];
 
