--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         const { useState } = React;
         const App = () => {
             const sessions = [
-                { id: 1, title: "Session 1: Fundamentals", file: "session1.html" },
-                { id: 2, title: "Session 2: Functions", file: "session2.html" },
-                { id: 3, title: "Code Examples", file: "code-examples.html" }
+                { id: 1, title: "Session 1: Programming Journey", file: "session1.html" },
+                { id: 2, title: "Session 2: Data Types & Variables", file: "session2.html" },
+              //  { id: 3, title: "Code Examples", file: "code-examples.html" }
             ];
 
             return (
