no oop in session 3

--- a/code.html
+++ b/code.html
@@ -21,7 +21,7 @@
         </a>
 
             <a href="https://colab.research.google.com/github/mhe931/python-fundamentals/blob/main/session3_code.ipynb"" class="bg-purple-600 hover:bg-purple-500 text-white font-bold py-4 px-8 rounded-xl transition-colors duration-300 transform hover:scale-105 shadow-lg">
-                Session 3: Functions & OOP
+                Session 3: Functions
                 <img src="https://colab.research.google.com/assets/colab-badge.svg" alt="Session 3: Functions & OOP" />
             </a>
         </div>
