--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 { id: 1, title: "Session 1: Programming Journey", file: "session1.html" },
                 { id: 2, title: "Session 2: Data Types & Variables", file: "session2.html" },
                 { id: 3, title: "Code Examples", file: "code.html" },
-                { id: 4, title: "git as project management", file: "git.html" },
+                { id: 4, title: "git as project management", file: "git.html" }
             ];
 
             return (
