--- a/git.html
+++ b/git.html
@@ -41,37 +41,47 @@
             justify-content: center;
         }
         .section-card {
-            width: 80vw;
+            width: 90vw;
             max-width: 900px;
             background-color: rgba(44, 62, 80, 0.9);
             backdrop-filter: blur(10px);
             border-radius: 1.5rem;
             box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
-            padding: 2.5rem;
-            margin: 20px;
+            padding: 2rem;
+            margin: 10px;
             display: flex;
             flex-direction: column;
             gap: 1rem;
             transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1);
+        }
+        @media (min-width: 640px) {
+            .section-card {
+                padding: 2.5rem;
+            }
         }
         h1, h2, h3 {
             font-weight: 700;
             color: #ecf0f1;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         }
-        h1 { font-size: 3.5rem; }
-        h2 { font-size: 2.25rem; }
-        p { font-size: 1.25rem; line-height: 1.6; color: #bdc3c7; }
+        h1 { font-size: 2.5rem; }
+        @media (min-width: 640px) { h1 { font-size: 3.5rem; } }
+        h2 { font-size: 1.75rem; }
+        @media (min-width: 640px) { h2 { font-size: 2.25rem; } }
+        p, ul { font-size: 1rem; line-height: 1.6; color: #bdc3c7; }
+        @media (min-width: 640px) { p, ul { font-size: 1.25rem; } }
         pre {
             background-color: #34495e;
-            padding: 1.5rem; /* Slightly larger padding for code block */
+            padding: 1rem;
             border-radius: 0.75rem;
             white-space: pre-wrap;
             word-wrap: break-word;
             font-family: monospace;
             overflow-x: auto;
             border-left: 4px solid #3498db;
+            font-size: 0.875rem;
         }
+        @media (min-width: 640px) { pre { padding: 1.5rem; font-size: 1rem; } }
         .nav-buttons {
             position: fixed;
             bottom: 2rem;
@@ -115,6 +125,8 @@
         const { useState, useEffect } = React;
 
         // Content for each section of the presentation
+        // Note: I've changed the transform values to be in viewport units (vw, vh)
+        // This ensures the presentation is responsive and doesn't go off-screen on mobile
         const sections = [
             {
                 title: "What is Git?",
@@ -128,32 +140,32 @@
                 content: "You interact with Git using commands in your terminal or command prompt. The basic workflow involves adding changes to a staging area and then committing them to save a new version of the project.",
                 code: `git add .
 git commit -m "Added a new feature"`,
-                transform: { x: -1200, y: 0, scale: 0.8 }
+                transform: { x: -120, y: 0, scale: 0.8 }
             },
             {
                 title: "What is GitHub?",
                 content: "While Git is a local tool, GitHub is a web-based hosting service for Git repositories. It's the social network for developers! It allows teams to collaborate, share code, and manage projects in a central location.",
                 image: "https://www.vectorlogo.zone/logos/github/github-icon.svg",
-                transform: { x: 1200, y: 0, scale: 0.8 }
+                transform: { x: 120, y: 0, scale: 0.8 }
             },
             {
                 title: "Our Open Source Project: Python Adventure Game",
                 content: "Today, we'll be working with an open-source Python adventure game. The goal is to collaborate on building a new story line for this game. It's a great way to learn Git in a practical, fun way.",
                 link: "https://github.com/mhe931/python-adventure-game.git",
                 contributeLink: "https://github.com/mhe931/python-adventure-game/blob/main/CONTRIBUTING.md",
-                transform: { x: 0, y: -800, scale: 0.8 }
+                transform: { x: 0, y: -100, scale: 0.8 }
             },
             {
                 title: "How to Fork the Project",
                 content: "Forking is a crucial step. It means you are making a personal copy of the project on your own GitHub account. This allows you to make changes without affecting the original project.",
                 description: "Steps: 1. Go to the project's GitHub page. 2. Click the 'Fork' button on the top-right.",
-                transform: { x: -1200, y: -800, scale: 0.8 }
+                transform: { x: -120, y: -100, scale: 0.8 }
             },
             {
                 title: "How to Have it on Your System",
                 content: "Once you have your own fork, you need to get a local copy on your computer. This is called cloning. This command will copy your forked repository to your machine.",
                 code: "git clone https://github.com/YOUR_USERNAME/python-adventure-game.git",
-                transform: { x: 1200, y: -800, scale: 0.8 }
+                transform: { x: 120, y: -100, scale: 0.8 }
             },
             {
                 title: "How to Add a New Story",
@@ -164,18 +176,18 @@ git checkout -b new-story-branch
 git add .
 git commit -m "Added new story"
 git push origin new-story-branch`,
-                transform: { x: 0, y: 800, scale: 0.8 }
+                transform: { x: 0, y: 100, scale: 0.8 }
             },
             {
                 title: "What is a Pull Request?",
                 content: "A Pull Request (PR) is how you propose your changes to be merged into the original project. The project maintainer can review your code and decide to accept it.",
                 image: "https://placehold.co/400x200/2ecc71/ffffff?text=Pull+Request+Concept",
-                transform: { x: -1200, y: 800, scale: 0.8 }
+                transform: { x: -120, y: 100, scale: 0.8 }
             },
             {
                 title: "Why Git for Project Management?",
                 content: "Git is more than just saving versions. It's a powerful project management tool. It enables seamless collaboration, keeps a clear history of all changes, allows for parallel work on different features (branches), and provides an easy way to merge everyone's work together.",
-                transform: { x: 1200, y: 800, scale: 0.8 }
+                transform: { x: 120, y: 100, scale: 0.8 }
             },
             {
                 title: "Let's Get Started!",
@@ -193,7 +205,7 @@ git push origin new-story-branch`,
                     "**Push** your branch to your remote repository.",
                     "Open a **Pull Request** to the original project."
                 ],
-                transform: { x: 0, y: 1600, scale: 0.8 }
+                transform: { x: 0, y: 200, scale: 0.8 }
             }
         ];
 
@@ -229,7 +241,7 @@ git push origin new-story-branch`,
             };
 
             const currentTransform = sections[currentSectionIndex].transform;
-            const transformStyle = `translate3d(${-currentTransform.x}px, ${-currentTransform.y}px, 0) scale(${currentTransform.scale})`;
+            const transformStyle = `translate3d(${-currentTransform.x}vw, ${-currentTransform.y}vh, 0) scale(${currentTransform.scale})`;
 
             return (
                 <div className="flex flex-col items-center justify-center h-full w-full">
@@ -242,7 +254,7 @@ git push origin new-story-branch`,
                                     position: 'absolute',
                                     left: '50%',
                                     top: '50%',
-                                    transform: `translate3d(calc(-50% + ${section.transform.x}px), calc(-50% + ${section.transform.y}px), 0) scale(${section.transform.scale / 1})`,
+                                    transform: `translate3d(calc(-50% + ${section.transform.x}vw), calc(-50% + ${section.transform.y}vh), 0) scale(${section.transform.scale / 1})`,
                                     opacity: currentSectionIndex === index ? 1 : 0.2,
                                     zIndex: currentSectionIndex === index ? 1 : 0
                                 }}
@@ -310,3 +322,4 @@ git push origin new-story-branch`,
     </script>
 </body>
 </html>
+
