--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             const sessions = [
                 { id: 1, title: "Session 1: Programming Journey", file: "session1.html" },
                 { id: 2, title: "Session 2: Data Types & Variables", file: "session2.html" },
-                { id: 3, title: "Session 2: Data Types & Variables", file: "session3.html" },
+                { id: 3, title: "Session 3: Introduction to Data", file: "session3.html" },
                 { id: 4, title: "Code Examples", file: "code.html" },
                 { id: 5, title: "git for project management", file: "git.html" }
             ];
