--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
                 { id: 2, title: "Session 2: Data Types & Variables", file: "session2.html" },
                 { id: 3, title: "Session 3: Introduction to Data", file: "session3.html" },
                 { id: 4, title: "Code Examples", file: "code.html" },
-                { id: 5, title: "git for project management", file: "git.html" }
+                { id: 5, title: "git for project management", file: "git.html" },
+                { id: 6, title: "Däniel Ebrahimzadeh theme 3", file: "DänielEbrahimzadehTheme3.html" },
+                { id: 7, title: "Däniel Ebrahimzadeh theme 5", file: "DänielEbrahimzadehTheme5.html" },
+                { id: 8, title: "Finnish 1", file: "Finnish1.html" }
+                
             ];
 
             return (
