--- a/yaysay.html
+++ b/yaysay.html
@@ -1,4 +1,4 @@
-import React, { useState } from 'react';
+یای‌سimport React, { useState } from 'react';
 import { Menu, Zap, Users, Shield, DollarSign, Gift, CheckCircle, UserPlus, Send, MessageSquare, Globe } from 'lucide-react';
 
 // --- 1. LOCALIZATION DATA ---
@@ -93,7 +93,7 @@ const translations = {
         p_data_4: "Secure File Handling: We only store Telegram File IDs for images, not the image content locally, enhancing security.",
     },
     fa: {
-        title: "راهنمای کاربری ربات yaysay",
+        title: "راهنمای کاربری ربات یای‌سِی",
         subtitle: "راهنمای تعاملی برای تمام توابع، نقش‌ها و امتیازات اصلی.",
         menu: "فهرست",
         sections: [
@@ -106,7 +106,7 @@ const translations = {
         
         // Overview & Roles
         o_title: "۱. مرور کلی و نقش‌های کاربری",
-        o_intro: "ربات yaysay یک پلتفرم قوی برای نظرسنجی با یک سیستم امتیازدهی گیمیفیکیشن است. کیبورد و دسترسی‌های شما به نقش شما بستگی دارد.",
+        o_intro: "ربات یای‌سِی یک پلتفرم قوی برای نظرسنجی با یک سیستم امتیازدهی گیمیفیکیشن است. کیبورد و دسترسی‌های شما به نقش شما بستگی دارد.",
         role_admin: "ادمین (👑)",
         role_manager: "مدیر (✨)",
         role_user: "کاربر (👤)",
