--- a/yaysay.html
+++ b/yaysay.html
@@ -1,4 +1,4 @@
-یای‌سimport React, { useState } from 'react';
+import React, { useState } from 'react';
 import { Menu, Zap, Users, Shield, DollarSign, Gift, CheckCircle, UserPlus, Send, MessageSquare, Globe } from 'lucide-react';
 
 // --- 1. LOCALIZATION DATA ---
