--- a/Finnish101.html
+++ b/Finnish101.html
@@ -22,7 +22,8 @@
             font-weight: 700;
         }
         .reveal .controls button { color: #047857 !important; }
-        .reveal section { padding: 30px 0; }
+        /* KORJATTU: Sallii pystysuuntaisen vierityksen, jos dian sisältö ylittää näytön koon */
+        .reveal section { padding: 30px 0; overflow-y: auto; }
         .teal-box { background: rgba(4, 120, 87, 0.1); border-radius: 10px; padding: 15px; margin-top: 15px; }
         .teal-box h4 { color: #047857; }
         .reveal table {
